blue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue
  name: blue-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
      version: v1
  template:
    metadata:
      labels:
        app: blue
        version: v1
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: container-blue
