client-nfs-provisioner.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client-nfs-provisioner
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: client-nfs-provisioner
    spec:
      serviceAccountName: sa-nfs-dynamic-provisioner 
      containers:
        - name: client-nfs-provisioner
          image: quay.io/external_storage/nfs-client-provisioner:latest
          volumeMounts:
            - name: volume-nfs-provisioner
              mountPath: /persistentvolumes
      volumes:
       - name: volume-nfs-provisioner 
         nfs:
           server: 10.160.0.5
           path: /nfs_dynamic/shared/pod-volumes
