ds-cluster-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-cluster-agent
spec:
  selector:
    matchLabels:
      tier: hello-agent
  template:
    metadata:
      labels:
        tier: hello-agent
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
        - name: container1
          image: gcr.io/google-samples/hello-app:1.0
