first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels:
    app: hello-world-app
spec:
  containers:
  - name: first
    image: "gcr.io/google-samples/hello-app:1.0"
