green-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: green
  name: green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
      version: v1
  template:
    metadata:
      labels:
        app: green
        version: v1
    spec:
      containers:
        - image: khateebsyed/bg-deployment:green
          name: container-green
