label-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-pod
  labels:
    app: web
spec:
  containers:
  - name: container-label
    image: nginx
