nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: nginx-pod
  template:
    metadata:
      labels:
        tier: nginx-pod
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.18
