node-selector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-selector-pod
spec:
  containers:
  - name: container-1
    image: gcr.io/google-samples/hello-app:1.0
  nodeSelector: 
    app: testing
