webapp-cp-toleration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: webapp-cp-toleration
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: container-web-app
