default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: webapp3-svc
      port:
        number: 80
