host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: webapp1.kubernetes.example
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: webapp1-svc
            port:
              number: 80
  - host: webapp2.kubernetes.example
    http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: webapp2-svc
            port:
              number: 80
  defaultBackend:
          service:
            name: webapp3-svc
            port:
              number: 80
