tls-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-based-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - tls.kubernetes.example
    secretName: ingress-secret
  rules:
  - host: tls.kubernetes.example
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: webapp-tls-svc
            port:
              number: 80
